gccida/c0/duplicate_decls
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1848:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1849:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1850:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1851:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1861:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1862:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1863:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // [rsp+8h] [rbp-108h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1869:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *value_type; // [rsp+58h] [rbp-B8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1877:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *trytype_0; // [rsp+A0h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:1878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *trytype; // [rsp+A8h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2006:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( newtype->int_cst.rtl[2] ) 
^    ~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2008:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( oldtype->int_cst.rtl[2] ) 
^    ~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2256:14: error: expected expression
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2256:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2256:31: error: invalid operands to binary expression ('struct tree_block' and 'int')
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
               ~~~~~~~~~~~~~~ ^ ~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2256:52: error: expected expression
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2256:44: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/c-decl.c:2256:69: error: invalid operands to binary expression ('struct tree_block' and 'int')
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
                                                     ~~~~~~~~~~~~~~ ^ ~~
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_decls/src/obj/c-decl.o] Error 1
